[JBIDE-9215] removed unneeded code
git-svn-id: http://svn.jboss.org/repos/jbosstools/trunk@32760 a97e2381-89e5-4abb-bab3-167db6db766c